--- a/components/Member/Board/Card/Card.module.scss
+++ b/components/Member/Board/Card/Card.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .profileImage {
@@ -51,7 +51,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   width: 100%;
   padding-bottom: 10px;
 }
