--- a/components/Member/Board/CustomScrollbarDiv/CustomScrollbarDiv.module.scss
+++ b/components/Member/Board/CustomScrollbarDiv/CustomScrollbarDiv.module.scss
@@ -2,8 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  align-items: start;
-  align-content: start;
+  align-items: flex-start;
+  align-content: flex-start;
   justify-content: space-between;
   overflow-y: scroll;
   overflow-x: visible;
