--- a/components/Member/Board/Sidebar/SidebarButtons.module.scss
+++ b/components/Member/Board/Sidebar/SidebarButtons.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   &:hover input {
     box-shadow: 0 0 0 2px color.$waffle-pale-yellow;
   }
@@ -44,7 +44,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   &:hover input {
     box-shadow: 0 0 0 2px color.$waffle-pale-yellow;
   }
